# Data-Prep-Pipeline

./: .gitignore  README.md  pyproject.toml  read_dataset.py  requirements.txt  test_full_pipeline.py
dataset/: Datasets.xlsx
src/data_processor/: __init__.py  core.py  readers.py  transformers.py  workflows.py  writers.py
src/data_processor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_readers.py  test_transformers.py  test_workflows.py
